style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');

:root {
  font-size: 16px;
  --text-color: #000;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Poppins', sans-serif;
  color: var(--text-color);
}

h1 {
  font-size: 2.5rem;
}

h2 {
  font-size: 1.7rem;
}

h3 {
  font-size: 1.17rem;
}

h4 {
  font-size: 1rem;
}

body>header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem 3rem;
}

main {
  padding: 2rem 3rem;
}

footer {
  text-align: center;
  padding: 1rem;
}

.nav-btns {
  gap: 1rem;
}

.nav-btns li {
  list-style: none;
}

.nav-btns a {
  text-decoration: none;
  color: var(--text-color);
}

.nav-btns a:hover {
  cursor: pointer;
  text-decoration: underline;
}

main>section {
  margin: 0 auto 3rem auto;
  /* margin-bottom: 3rem; */
  padding: 1rem;
  display: flex;
  align-items: center;
  line-height: 1.15;
  gap: 0.5em;
}

.card {
  margin: 2rem 0;
  padding: 1.5rem;
  border: 2px solid #000;
  border-radius: 2rem;
}

.exp-lists {
  display: grid;
  grid-template-columns: repeat(4, max-content);
  grid-auto-rows: 1fr;
  gap: 3em;
  justify-items: center;
  padding: 1.5rem;
}

.exp-lists li {
  list-style: none;
  text-align: center;
  font-size: 1.5rem;
  font-weight: 500;
}

#projects-list {
  transition: 0.5s ease-in-out;
}

.project-lists {
  display: flex;
  flex-direction: row;
}


.projects img {
  width: 256px;
  height: 256px;
  display: block;
  border: 1px solid #000;
  border-radius: 1.5rem;
}

.project-lists {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: min-content;
  grid-template-rows: max-content;
  column-gap: 2rem;
  padding: 0 1rem;
}

.project-lists>.card {
  display: flex;
  gap: 1rem;
  flex-direction: column;
  align-items: center;
  height: 90%;
}

.btn {
  display: inline-block;
  border: 1px solid #000;
  border-radius: 2rem;
  padding: 0.7rem 1rem;
  text-decoration: none;
  color: black;
}

.btn:hover {
  color: white;
  background-color: black;
}

.bottom-btns {
  margin-top: auto;
}

.slider-container {
  width: 340px;
  overflow-x: hidden;
  text-align: center;
  margin-top: 1rem;
}

.slider-container button {
  background: none;
  border: none;
  cursor: pointer;
}



@media screen and (min-width: 320px) and (max-width: 1079px) {
  .last-name {
    display: none;
  }

  .nav-btns {
    display: none;
  }

  main>section {
    max-width: 80vw;
    flex-direction: column;
    text-align: center;
  }

  .experience .card {
    height: 70vh;
    overflow-y: scroll;
  }

  .exp-lists {
    display: flex;
    flex-direction: column;
  }

  .exp-lists li {
    font-size: 1rem;
  }
}

@media screen and (min-width: 1080px) {
  .nav-btns {
    display: flex;
  }

  .last-name {
    display: inline;
  }

  main>section {
    max-width: max-content;
    flex-direction: column;
    text-align: left;
  }

  .profile {
    flex-direction: row;
  }

  .profile p {
    font-size: 1.5rem;
  }

  .profile h1 {
    font-size: 3rem;
  }

  .profile h2 {
    font-size: 2rem;
  }

  .profile article {
    margin-left: 2rem;
  }
}

